--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@fastify/schedule": "^4.1.1",
 		"axios": "^1.2.4",
 		"cheerio": "1.0.0-rc.12",
+		"commander": "^11.1.0",
 		"domhandler": "5.0.3",
 		"fastify": "4.28.1",
 		"html-to-text": "9.0.5",
